--- a/RxCamera/RxCamera/Storyboard/Base.lproj/Main.storyboard
+++ b/RxCamera/RxCamera/Storyboard/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Camera Filter Controller-->
+        <!--Camera Filter-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="CameraFilterController" customModule="RxCamera" customModuleProvider="target" sceneMemberID="viewController">
@@ -21,8 +21,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VFP-Tb-0gz">
                                 <rect key="frame" x="0.0" y="64" width="375" height="500.5"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q8C-sp-FMG">
-                                <rect key="frame" x="131" y="599.5" width="113" height="30.5"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q8C-sp-FMG">
+                                <rect key="frame" x="131" y="600" width="112" height="30"/>
                                 <color key="backgroundColor" red="0.078431372550000003" green="0.57647058819999997" blue="1" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Apply Filter">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -31,18 +31,18 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Q8C-sp-FMG" secondAttribute="bottom" constant="37" id="CK1-Ya-d79"/>
                             <constraint firstItem="VFP-Tb-0gz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JXR-i5-BK8"/>
                             <constraint firstItem="VFP-Tb-0gz" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="SRc-Yq-hnA"/>
-                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="131" id="TQg-51-Efh"/>
+                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="centerX" secondItem="VFP-Tb-0gz" secondAttribute="centerX" id="T5g-Vx-XPd"/>
+                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="top" secondItem="VFP-Tb-0gz" secondAttribute="bottom" constant="27" id="WSc-JT-cUz"/>
+                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="131" id="X9e-lm-m2z"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Q8C-sp-FMG" secondAttribute="bottom" constant="37" id="boX-u1-Vjb"/>
                             <constraint firstItem="VFP-Tb-0gz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dbl-Vq-NEz"/>
                             <constraint firstItem="VFP-Tb-0gz" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.75" id="fnw-yk-u2l"/>
-                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="top" secondItem="VFP-Tb-0gz" secondAttribute="bottom" constant="35" id="p5q-Ic-UpI"/>
-                            <constraint firstItem="VFP-Tb-0gz" firstAttribute="centerX" secondItem="Q8C-sp-FMG" secondAttribute="centerX" id="wD8-Eo-7HN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="jeg-Wj-avN">
+                    <navigationItem key="navigationItem" title="Camera Filter" id="jeg-Wj-avN">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Izv-NZ-6u5">
                             <connections>
                                 <segue destination="Is3-3q-fzE" kind="presentation" id="Tz3-wd-DoQ"/>
@@ -54,7 +54,7 @@
             </objects>
             <point key="canvasLocation" x="1045.5999999999999" y="100.29985007496252"/>
         </scene>
-        <!--Photos Controller-->
+        <!--Photos-->
         <scene sceneID="bbJ-TR-lz5">
             <objects>
                 <collectionViewController id="cfn-z0-N0p" customClass="PhotosController" customModule="RxCamera" customModuleProvider="target" sceneMemberID="viewController">
@@ -83,7 +83,7 @@
                             <outlet property="delegate" destination="cfn-z0-N0p" id="hO6-xg-L3n"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="A35-Pi-MnV"/>
+                    <navigationItem key="navigationItem" title="Photos" id="A35-Pi-MnV"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2sS-0f-h7p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
