--- a/RxCamera/RxCamera/Storyboard/Base.lproj/Main.storyboard
+++ b/RxCamera/RxCamera/Storyboard/Base.lproj/Main.storyboard
@@ -48,6 +48,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="photoImageView" destination="VFP-Tb-0gz" id="O58-qx-nE2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
