--- a/RxCamera/RxCamera/Storyboard/Base.lproj/Main.storyboard
+++ b/RxCamera/RxCamera/Storyboard/Base.lproj/Main.storyboard
@@ -21,23 +21,29 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VFP-Tb-0gz">
                                 <rect key="frame" x="0.0" y="64" width="375" height="501"/>
                             </imageView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q8C-sp-FMG">
-                                <rect key="frame" x="131" y="600" width="112" height="30"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q8C-sp-FMG">
+                                <rect key="frame" x="137.5" y="600" width="100" height="30"/>
                                 <color key="backgroundColor" red="0.078431372550000003" green="0.57647058819999997" blue="1" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="1q9-tO-wt6"/>
+                                    <constraint firstAttribute="height" constant="30" id="qe9-8e-2fL"/>
+                                </constraints>
                                 <state key="normal" title="Apply Filter">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="applyFilterButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="htq-sP-2Ja"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Q8C-sp-FMG" secondAttribute="bottom" constant="37" id="HL7-MY-bdx"/>
-                            <constraint firstItem="VFP-Tb-0gz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NOm-dx-Uxr"/>
-                            <constraint firstItem="VFP-Tb-0gz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Q9u-9Y-tus"/>
-                            <constraint firstAttribute="trailing" secondItem="VFP-Tb-0gz" secondAttribute="trailing" id="XjM-2t-RBX"/>
-                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="top" secondItem="VFP-Tb-0gz" secondAttribute="bottom" constant="35" id="dVU-a0-SH5"/>
-                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="centerX" secondItem="VFP-Tb-0gz" secondAttribute="centerX" id="eEf-VL-LdO"/>
-                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="131" id="mU8-7k-BEV"/>
+                            <constraint firstItem="VFP-Tb-0gz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0X4-fB-YzR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Q8C-sp-FMG" secondAttribute="bottom" constant="37" id="Ghu-RU-2UJ"/>
+                            <constraint firstItem="VFP-Tb-0gz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RPF-3h-eVK"/>
+                            <constraint firstItem="VFP-Tb-0gz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="XNN-sz-vs9"/>
+                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="top" secondItem="VFP-Tb-0gz" secondAttribute="bottom" constant="35" id="ffp-1Y-orN"/>
+                            <constraint firstItem="Q8C-sp-FMG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tGO-z2-8i0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -49,6 +55,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="applyFilterButton" destination="Q8C-sp-FMG" id="tvv-ar-FfS"/>
                         <outlet property="photoImageView" destination="VFP-Tb-0gz" id="O58-qx-nE2"/>
                     </connections>
                 </viewController>
